# agent-runtime

./: .env.example  .gitignore  README.md  bootstrap.py  pyproject.toml  requirements.txt
agent_runtime/: __init__.py  bash_shells.py  cancellation.py  cleanup_registry.py  config.py  hooks.py  models.py  permissions.py  query.py  registry.py  session.py  structured_output.py  subagents.py  tool_executor.py  types.py
agent_runtime/compaction/: __init__.py  auto_compact.py  budget.py  cleanup.py  compact.py  microcompact.py  prompt.py  tokens.py
agent_runtime/tools/: __init__.py  bash.py  bash_output.py  edit.py  glob_tool.py  grep.py  kill_shell.py  read.py  send_message.py  spawn_agent.py  task_output.py  task_stop.py  todo_write.py  write.py
agents/: __init__.py  explorer.py  general_purpose.py  planner.py  security_reviewer.py
cli/: __init__.py  __main__.py  config.py  main.py
rendering/: __init__.py  base.py  cli.py
tests/: conftest.py  test_cancellation.py  test_compaction.py  test_hooks.py  test_permissions.py  test_structured_output.py
tests/tools/: test_bash_background.py  test_bash_sync_abort.py  test_task_output.py  test_todo_write.py  test_write.py
